kubernetes/apps/observability/pve-api-exporter/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve-api-exporter
  labels:
    app.kubernetes.io/name: pve-api-exporter
spec:
  selector:
    app.kubernetes.io/name: pve-api-exporter
  ports:
    - name: metrics
      port: 9221
      targetPort: metrics
